@@ -14,6 +14,7 @@
   * Fixing a problem with frozen SSL objects.  RF #24950
   * Do not send a referer on meta refresh. RF #24945
   * Fixed a bug with double semi-colons in Content-Disposition headers
+  * Properly handling cookies that specify a path.  RF #25259
 
 === 0.9.2 / 2009/03/05
 
